--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 							<div class="cb-intro-figure">
 								<div class="cb-intro-figure-media">
 									<video
-										src="introvideo.mp4"
+										src="introvideo..mp4"
 										autoplay
 										playsinline
 										loop
