--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 								</h2>
 							</div>
 							<div class="cb-outro-caption">
-								<h3>Social Media and contacts</h3>
+								<h3>Social Medias</h3>
 							</div>
 						</div>
 						<div class="cb-outro-socials">
