--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 			gtag("config", "G-HLWHKNLE5E");
 		</script>
-		<title>swrnymx7</title>
+		<title>Swrnymx7 | UX designer</title>
 		<link
 			rel="icon"
 			type="image/png"
