--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 			gtag("config", "G-HLWHKNLE5E");
 		</script>
-		<title>Swrnymx7 | UX Designer</title>
+		<title>swrnymx7</title>
 		<link
 			rel="icon"
 			type="image/png"
@@ -272,22 +272,14 @@
 									<em>Foll</em>
 									<span class="cb-coin">
 										<span class="cb-coin-svg -v1"></span>
-										<span class="cb-coin-video">
-											<video
-												data-src="https://cdn.cuberto.com/cb/icons/1.mp4"
-												autoplay
-												playsinline
-												loop
-												muted
-											></video>
-										</span>
+										
 										<span class="cb-coin-letter">o</span>
 									</span>
 									w<br />Me
 								</h2>
 							</div>
 							<div class="cb-outro-caption">
-								<h3>Social Medias</h3>
+								<h3>Social Media and contacts</h3>
 							</div>
 						</div>
 						<div class="cb-outro-socials">
