--- a/index.html
+++ b/index.html
@@ -272,7 +272,15 @@
 									<em>Foll</em>
 									<span class="cb-coin">
 										<span class="cb-coin-svg -v1"></span>
-										
+										<span class="cb-coin-video">
+											<video
+												data-src="https://cdn.cuberto.com/cb/icons/1.mp4"
+												autoplay
+												playsinline
+												loop
+												muted
+											></video>
+										</span>
 										<span class="cb-coin-letter">o</span>
 									</span>
 									w<br />Me
