--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 										<div class="cb-overview-text">
 											<p>
 												Hi, I'm Swarnim Adhikari, a
-												versatile UX designer pursuing a
+												versatile designer pursuing a
 												diploma in computer engineering.
 											</p>
 											<p>
