--- a/index.html
+++ b/index.html
@@ -90,24 +90,26 @@
 		/>
 	</head>
 	<body>
-		<div class="cb-loader cb-loader_overlay -visible">
-			<div class="cb-loader_overlay-fill"></div>
-			<div class="cb-loader_overlay-box">
-				<div class="cb-loader_overlay-word -v1">
-					<span>Design</span>
-				</div>
-				<div class="cb-loader_overlay-word -v2">
-					<span>for users</span>
-				</div>
-				<div class="cb-loader_overlay-word -v3">
-					<span>Not for</span>
-				</div>
-				<div class="cb-loader_overlay-word -v4">
-					<span> Yourself<span class="-blink">_</span> </span>
-				</div>
-				<div class="cb-loader_overlay-percent">
-					<span>0%</span>
-				</div>
+			  <div class="cb-loader cb-loader_overlay -visible">
+            <div class="cb-loader_overlay-fill"></div>
+            <div class="cb-loader_overlay-box">
+                <div class="cb-loader_overlay-word -v1">
+                    <span>Design</span>
+                </div>
+                <div class="cb-loader_overlay-word -v2">
+                    <span>for</span>
+                </div>
+                <div class="cb-loader_overlay-word -v3">
+                    <span>Seamless</span>
+                </div>
+                <div class="cb-loader_overlay-word -v4">
+                    <span>
+                        Experiences<span class="-blink">_</span>
+                    </span>
+                </div>
+                <div class="cb-loader_overlay-percent">
+                    <span>0%</span>
+                </div>
 			</div>
 		</div>
 
