--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <h1>404 - Webpage Removed Temporarily</h1>
-    <p>The requested webpage on my personal site has been temporarily removed. I apologize for any inconvenience.</p>
+    <h1>HAHA</h1>
+    <p>PURCHASED THIS DOMAIN JUST FOR FUN CUZ I AM RICH AS FUCK</p>
 </body>
 </html>
