--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 </head>
 <body>
     <h1>HAHA</h1>
-    <p>PURCHASED THIS DOMAIN JUST FOR FUN CUZ I AM RICH AS FUCK</p>
+    <p>PURCHASED THIS DOMAIN JUST FOR FUN SIUU</p>
 </body>
 </html>
